# zazen

./: .gitignore  Cargo.toml  deny.toml
.github/workflows/: continuous.yml  zuu.yml
logs/: zazen-0.1.0-changes.md
man/1/: zazen.1
src/: main.rs
zazen/logs/: zazen-0.1.0-changes.md
zazen/readme/: description.md  examples.md  header.md  name.md  see.md  synopsis.md
zuu/stderr/: clippy.ji  test.ji
zuu/stdout/: test.ji
