[package]
name = "zazen"
version = "0.1.0"
edition = "2021"
description = "A tool like zen"
repository=  "https://github.com/otechdo/zazen"
license-file = "LICENSE"
readme = "README.md"
categories = ["development-tools"]
keywords = ["zen"]
authors = ["Willy Micieli"]
[dependencies]
cargo_metadata = "0.18.1"
chrono = "0.4.38"
inquire = "0.7.5"
